# SubGHz_Phy_PingPong

./: .gitignore  .gitmodules  .mxproject  CMakeCache.txt  CMakeLists.txt  README.md  STM32WL55XX_FLASH_CM4.ld  SubGHz_Phy_PingPong.ioc  build.ninja  cmake_install.cmake  compile_commands.json  readme.txt
Core/Src/: main.c
EWARM/: SubGHz_Phy_PingPong.ewd  SubGHz_Phy_PingPong.ewp
MDK-ARM/: SubGHz_Phy_PingPong.uvoptx  SubGHz_Phy_PingPong.uvprojx
STM32CubeIDE/: .project.bak
SubGHz_Phy/App/: app_subghz_phy.c  subghz_phy_app.c  subghz_phy_app.cpp  subghz_phy_app.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
